fix(ListView): stick header be covered by ListItem. close #1456

--- a/components/list-view/style/index.less
+++ b/components/list-view/style/index.less
@@ -123,3 +123,9 @@
     background: rgba(0, 0, 0, 0.498039);
   }
 }
+
+.am-list-view-scrollview {
+  .sticky {
+    z-index: 999;
+  }
+}
